--- a/css/main.css
+++ b/css/main.css
@@ -1691,7 +1691,7 @@ a {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  /* height: 100%; */
+  height: 100%;
   visibility: hidden;
   position: absolute;
   left: 100%;
@@ -1704,7 +1704,12 @@ a {
   will-change: transform, opacity, width;
 }
 .info-graph-projects-swiper .swiper-wrapper {
-  margin-top: 75px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 .info-graph-projects-swiper .swiper-nav {
   margin-top: auto;
@@ -1715,8 +1720,6 @@ a {
   -ms-flex-align: center;
   align-items: center;
   position: static;
-  margin-bottom: 60px !important;
-  margin-top: 60px;
   padding-right: 0;
 }
 
