--- a/css/main.css
+++ b/css/main.css
@@ -1338,7 +1338,7 @@ a {
   -ms-flex-direction: column;
   flex-direction: column;
   max-width: clamp(29.063rem, 8.104rem + 38.75vw, 60.5rem);
-  padding-bottom: 0;
+  padding-bottom: 58px;
 }
 @media (max-width: 1024px) {
   .policy-popup__info {
@@ -1568,7 +1568,7 @@ a {
   -ms-overflow-style: none; /* IE и Edge */
   scrollbar-width: none; /* Firefox */
   overflow-y: auto;
-  padding-bottom: 0;
+  padding-bottom: 58px;
 }
 @media (max-width: 1024px) {
   .offer-popup__info {
@@ -2225,7 +2225,9 @@ a {
   -ms-flex-align: center;
   align-items: center;
   gap: 20px;
-  margin-top: 5px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 @media (max-width: 1024px) {
   .hero__link {
