--- a/css/main.css
+++ b/css/main.css
@@ -2127,7 +2127,6 @@ a {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  margin-bottom: 15px;
   display: none;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -2153,8 +2152,10 @@ a {
     display: flex;
   }
 }
-.hero__model-container .hero__title {
-  letter-spacing: -0.18px;
+.hero__model-container .hero__title span {
+  /*   letter-spacing: 2px; */
+  margin-left: 5px;
+  display: block;
 }
 @media (max-width: 1024px) {
   .hero__model-container {
