--- a/css/main.css
+++ b/css/main.css
@@ -1069,6 +1069,8 @@ a {
   top: 0;
   -ms-flex-negative: 0;
   flex-shrink: 0;
+  width: 10px;
+  height: 10px;
   margin-right: 15px;
   background-color: #101010;
   border: 2px solid #fff;
@@ -1137,6 +1139,9 @@ a {
 }
 
 .checkbox-item label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: clamp(0.75rem, 0.375rem + 0.42vw, 0.875rem);
@@ -1830,15 +1835,53 @@ a {
     opacity: 1;
   }
 }
-#telegram-popup {
-  padding: 0;
+.telegram-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
-  background-color: transparent;
-  -webkit-transition: 0.3s ease-in;
-  -o-transition: 0.3s ease-in;
-  transition: 0.3s ease-in;
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none;
+  z-index: 1000;
+  pointer-events: none;
 }
-#telegram-popup .popup-container {
+.telegram-popup.active {
+  opacity: 1;
+  pointer-events: all;
+}
+.telegram-popup.active .popup-container {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+.telegram-popup .popup-container {
+  -webkit-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  position: relative;
+  background-color: #171717;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding: 30px 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.telegram-popup .popup-container .logo {
+  visibility: visible;
+  margin-bottom: 80px;
+}
+.telegram-popup .popup-container form {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1846,18 +1889,48 @@ a {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
 }
-#telegram-popup form {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  -ms-flex-line-pack: center;
-  align-content: center;
+.telegram-popup .popup-close-btn {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 16px;
+  height: 16px;
+  color: #fff;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  z-index: 10;
 }
 
+/* #telegram-popup {
+  padding: 0;
+  background: transparent;
+  height: 100%;
+  transition: 0.3s ease-in;
+  overflow: hidden !important;
+  .is-close-btn {
+    width: 16px;
+    height: 16px;
+    top: 30px;
+    right: 30px;
+    opacity: 1;
+  }
+  .popup-container {
+    display: flex;
+    background: #171717;
+    flex-direction: column;
+  }
+  form {
+    flex: 1;
+    height: fit-content;
+    align-content: center;
+  }
+} */
 .fancybox__container #telegram-popup {
   -ms-flex-item-align: start;
   align-self: flex-start;
@@ -1950,9 +2023,108 @@ a {
 .fancybox-slide--closing {
   -webkit-transform: translateX(0);
   -ms-transform: translateX(0);
-  transform: translateX(0); /* Moves the popup out of view to the left */
+  transform: translateX(0);
 }
 
+@-webkit-keyframes titleOut {
+  0% {
+    position: absolute;
+    opacity: 1;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  }
+  100% {
+    position: absolute;
+    -webkit-transform: translate(-100%, -50%);
+    transform: translate(-100%, -50%);
+    opacity: 0;
+  }
+}
+
+@keyframes titleOut {
+  0% {
+    position: absolute;
+    opacity: 1;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  }
+  100% {
+    position: absolute;
+    -webkit-transform: translate(-100%, -50%);
+    transform: translate(-100%, -50%);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes titleTo {
+  0% {
+    position: absolute;
+    -webkit-transform: translate(-100%, -50%);
+    transform: translate(-100%, -50%);
+    opacity: 0;
+  }
+  100% {
+    position: absolute;
+    opacity: 1;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  }
+}
+@keyframes titleTo {
+  0% {
+    position: absolute;
+    -webkit-transform: translate(-100%, -50%);
+    transform: translate(-100%, -50%);
+    opacity: 0;
+  }
+  100% {
+    position: absolute;
+    opacity: 1;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  }
+}
+/* @keyframes swiperTo {
+  0% {
+    transform: translate(100%);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+@keyframes swiperOut {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+}
+
+@keyframes swiperSecondTo {
+  0% {
+    transform: translate(0);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-100%);
+  }
+}
+@keyframes swiperSecondOut {
+  0% {
+    opacity: 1;
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+}
+ */
 .header {
   padding-top: 30px;
   /*  margin-bottom: clamp(0.938rem, -14.986rem + 35.26vh, 7.813rem); */
@@ -2092,25 +2264,57 @@ a {
     grid-template-columns: 1fr;
   }
 }
+.hero__content .hero__info-container:not(.mobile),
+.hero__content .hero__model-container:not(.mobile) {
+  position: absolute;
+  top: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none;
+}
 @media (min-width: 1025px) {
-  .hero__content:has(.info-graph-button.tabs__nav-btn--active) .hero__info-container:not(.mobile) {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .hero__content:has(.info-graph-button.animate) .hero__info-container:not(.mobile) {
+    -webkit-animation: titleTo 1s ease-in forwards;
+    animation: titleTo 1s ease-in forwards;
+    pointer-events: all;
   }
-  .hero__content:has(.info-graph-button.tabs__nav-btn--active) .hero__model-container:not(.mobile) {
-    display: none;
+  .hero__content:has(.info-graph-button.animate) .hero__model-container:not(.mobile) {
+    -webkit-animation: titleOut 0.4s ease-in forwards;
+    animation: titleOut 0.4s ease-in forwards;
+    pointer-events: none;
   }
 }
 @media (min-width: 1025px) {
-  .hero__content:has(.model-graph-button.tabs__nav-btn--active) .hero__info-container:not(.mobile) {
-    display: none;
+  .hero__content:has(.model-graph-button.animate) .hero__info-container:not(.mobile) {
+    -webkit-animation: titleOut 0.4s ease-in forwards;
+    animation: titleOut 0.4s ease-in forwards;
   }
-  .hero__content:has(.model-graph-button.tabs__nav-btn--active) .hero__model-container:not(.mobile) {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .hero__content:has(.model-graph-button.animate) .hero__model-container:not(.mobile) {
+    pointer-events: none;
+    -webkit-animation: titleTo 1s ease-in forwards;
+    animation: titleTo 1s ease-in forwards;
+    pointer-events: all;
   }
+}
+.hero__info-middle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  position: relative;
 }
 .hero__info {
   -webkit-transition: all 1s ease;
@@ -2176,6 +2380,9 @@ a {
   min-height: 100vh;
 }
 .hero__info-container {
+  -webkit-transition: 1s ease-in;
+  -o-transition: 1s ease-in;
+  transition: 1s ease-in;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2234,11 +2441,16 @@ a {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  -webkit-transition: 1s ease-in;
+  -o-transition: 1s ease-in;
+  transition: 1s ease-in;
   display: none;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   max-width: clamp(24.938rem, 17.063rem + 8.75vw, 27.263rem);
+  opacity: 0;
+  pointer-events: none;
 }
 .hero__model-container .swiper-nav {
   padding: 0;
@@ -2263,7 +2475,6 @@ a {
   margin-top: -5px;
 }
 .hero__model-container .hero__title span {
-  /*   letter-spacing: 2px; */
   margin-left: 5px;
   display: block;
 }
@@ -2413,6 +2624,59 @@ a {
 }
 .hero__tabs {
   min-width: 0;
+}
+.hero .tabs__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.hero .tabs__content .tabs__panel {
+  width: 100%;
+  top: 0;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  opacity: 0;
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+}
+.hero .tabs__content .tabs__panel.second {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+.hero .tabs__content .tabs__panel--active {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  opacity: 1;
+  top: 0;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+.hero .tabs__content .tabs__panel.second.tabs__panel--active {
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+
+.loaded .hero .tabs__content .tabs__panel {
+  -webkit-transition: opacity 0.4s ease-in, -webkit-transform 1s ease-in;
+  transition: opacity 0.4s ease-in, -webkit-transform 1s ease-in;
+  -o-transition: transform 1s ease-in, opacity 0.4s ease-in;
+  transition: transform 1s ease-in, opacity 0.4s ease-in;
+  transition: transform 1s ease-in, opacity 0.4s ease-in, -webkit-transform 1s ease-in;
+}
+
+.hero__info-container:not(.mobile),
+.hero__model-container:not(.mobile) {
+  -webkit-animation: none;
+  animation: none;
 }
 
 .tabs__nav {
