--- a/css/main.css
+++ b/css/main.css
@@ -894,8 +894,8 @@ a {
 }
 @media (max-width: 1440px) {
   .popup-title {
-    font-size: 36px;
-    line-height: 46px;
+    font-size: 38px;
+    line-height: 48px;
     margin-bottom: 55px;
   }
 }
@@ -943,8 +943,15 @@ a {
   border-bottom: 1px solid #404040;
 }
 @media (max-width: 1440px) {
-  .input-group {
-    padding-bottom: 12px;
+  .input-group.name label {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+@media (max-width: 1440px) {
+  .input-group.telegram label {
+    font-size: 18px;
+    line-height: 28px;
   }
 }
 .input-group input {
@@ -996,23 +1003,23 @@ a {
 @media (max-width: 1440px) {
   .input-group input::-webkit-input-placeholder {
     font-size: 16px;
-    line-height: 175%;
+    line-height: 28px;
   }
   .input-group input::-moz-placeholder {
     font-size: 16px;
-    line-height: 175%;
+    line-height: 28px;
   }
   .input-group input:-ms-input-placeholder {
     font-size: 16px;
-    line-height: 175%;
+    line-height: 28px;
   }
   .input-group input::-ms-input-placeholder {
     font-size: 16px;
-    line-height: 175%;
+    line-height: 28px;
   }
   .input-group input::placeholder {
     font-size: 16px;
-    line-height: 175%;
+    line-height: 28px;
   }
 }
 @media (max-width: 1024px) {
@@ -1049,6 +1056,12 @@ a {
     font-size: 15px;
   }
 }
+@media (max-width: 1440px) {
+  .input-group input {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
 .input-group label {
   font-weight: 600;
   font-size: 20px;
@@ -1061,6 +1074,7 @@ a {
   .input-group label {
     font-size: 20px;
     margin-bottom: 18px;
+    line-height: 28px;
   }
 }
 @media (max-width: 1024px) {
@@ -1187,6 +1201,7 @@ a {
   font-size: clamp(0.75rem, 0.375rem + 0.42vw, 0.875rem);
   line-height: 162%;
   color: #fff;
+  cursor: pointer;
 }
 @media (max-width: 1440px) {
   .checkbox-item label {
@@ -1384,7 +1399,7 @@ a {
 }
 @media (max-width: 1440px) {
   .policy-popup__info {
-    padding: 50px 60px 50px 60px;
+    padding: 50px 60px 40px 60px;
   }
 }
 @media (max-width: 1024px) {
@@ -1431,6 +1446,7 @@ a {
 @media (max-width: 1440px) {
   .policy-popup__desc {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 .policy-popup .popup-text-bold {
@@ -1444,6 +1460,7 @@ a {
 @media (max-width: 1440px) {
   .policy-popup .popup-text-bold {
     font-size: 18px;
+    line-height: 26px;
   }
 }
 @media (max-width: 1024px) {
@@ -1467,6 +1484,7 @@ a {
 @media (max-width: 1440px) {
   .policy-popup .popup-text-normal {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 @media (max-width: 1024px) {
@@ -1492,6 +1510,7 @@ a {
 @media (max-width: 1440px) {
   .policy-popup .popup-text-normal a {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 @media (max-width: 1024px) {
@@ -1594,7 +1613,7 @@ a {
 }
 @media (max-width: 1440px) {
   .offer-popup__title {
-    font-size: clamp(1.563rem, 0.639rem + 1.44vw, 1.938rem);
+    font-size: clamp(1.938rem, -0.216rem + 3.37vw, 2.813rem);
     line-height: 127%;
     padding: 50px 67px 50px 80px;
     line-height: 124%;
@@ -1629,7 +1648,7 @@ a {
 @media (max-width: 1440px) {
   .offer-popup__info {
     line-height: 26px;
-    padding: 50px 70px 50px 60px;
+    padding: 50px 70px 40px 60px;
   }
 }
 @media (max-width: 1024px) {
@@ -1652,6 +1671,7 @@ a {
 @media (max-width: 1440px) {
   .offer-popup__desc {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 .offer-popup .popup-text-bold {
@@ -1665,6 +1685,7 @@ a {
 @media (max-width: 1440px) {
   .offer-popup .popup-text-bold {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 @media (max-width: 1024px) {
@@ -1696,6 +1717,7 @@ a {
 @media (max-width: 1440px) {
   .offer-popup .popup-text-normal {
     font-size: 16px;
+    line-height: 26px;
   }
 }
 @media (max-width: 1024px) {
@@ -1733,6 +1755,11 @@ a {
   margin-bottom: 22px;
   display: block;
   line-height: 28px;
+}
+@media (max-width: 1440px) {
+  .offer-popup .offer-text {
+    line-height: 26px;
+  }
 }
 
 .fancybox__slide.has-image {
@@ -2015,6 +2042,12 @@ a {
   cursor: pointer;
   z-index: 10;
 }
+@media (max-width: 1440px) {
+  .telegram-popup .popup-close-btn {
+    width: 14px;
+    height: 14px;
+  }
+}
 
 .fancybox__container #telegram-popup {
   -ms-flex-item-align: start;
@@ -2168,6 +2201,39 @@ a {
     transform: translate(0, -50%);
   }
 }
+.swiper {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: transform;
+}
+
+@-webkit-keyframes slideTo {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideTo {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
 .header {
   padding-top: 30px;
   /*  margin-bottom: clamp(0.938rem, -14.986rem + 35.26vh, 7.813rem); */
@@ -2226,9 +2292,9 @@ a {
 }
 .hero__content {
   position: relative;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 597px 1fr;
@@ -2246,8 +2312,8 @@ a {
   grid-template-columns: 0px 1fr;
 }
 .hero__content.project-visible .swiper-nav button.home-back {
-  -webkit-animation: btnVisible 1s forwards;
-  animation: btnVisible 1s forwards;
+  -webkit-animation: btnVisible 0.5s forwards;
+  animation: btnVisible 0.5s forwards;
 }
 .hero__content.project-visible .hero__project-upper {
   display: -webkit-box;
@@ -2264,6 +2330,8 @@ a {
   -ms-transform: translateX(-100%);
   transform: translateX(-100%);
   opacity: 0;
+  -webkit-animation: borderRightOut 0.1s;
+  animation: borderRightOut 0.1s;
 }
 .hero__content.project-visible .home-back.visible {
   opacity: 1;
@@ -2290,8 +2358,8 @@ a {
   width: 100%;
 }
 .hero__content.project-visible .footer {
-  -webkit-animation: footerOut 0.5s forwards;
-  animation: footerOut 0.5s forwards;
+  -webkit-animation: footerOut 0.3s forwards;
+  animation: footerOut 0.3s forwards;
 }
 .hero__content.project-visible .info-graph-projects-swiper {
   visibility: visible;
@@ -2364,9 +2432,9 @@ a {
 }
 .hero__info {
   width: 597px;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 @media (max-width: 1440px) {
   .hero__info {
@@ -2656,6 +2724,10 @@ a {
   width: -moz-fit-content;
   width: fit-content;
 }
+.hero__link img {
+  height: 14px;
+  width: 52px;
+}
 @media (max-width: 1440px) {
   .hero__link {
     font-size: 16px;
@@ -2732,6 +2804,14 @@ a {
     min-width: 16px;
   }
 }
+.hero__tabs-upper-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
 .hero__tabs {
   min-width: 0;
 }
@@ -2752,9 +2832,6 @@ a {
   display: -ms-flexbox !important;
   display: flex !important;
   opacity: 0;
-  -webkit-transition: none;
-  -o-transition: none;
-  transition: none;
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
   transform: translateX(100%);
@@ -2795,9 +2872,9 @@ a {
 }
 
 .tabs__nav {
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .info-graph-more {
@@ -2916,13 +2993,12 @@ a {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: clamp(0.75rem, 0.375rem + 0.42vw, 0.875rem);
-  line-height: 171%;
+  line-height: unset;
   color: #737373;
 }
 @media (max-width: 1440px) {
   .footer__copy {
     font-size: 12px;
-    line-height: 24px;
   }
 }
 @media (max-width: 1024px) {
@@ -2966,7 +3042,7 @@ a {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: clamp(0.75rem, 0.375rem + 0.42vw, 0.875rem);
-  line-height: 171%;
+  line-height: unset;
   color: #737373;
   -webkit-transition: 0.3s ease-in;
   -o-transition: 0.3s ease-in;
